# pivot

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_zh.md  build_exe.bat  main.py  pyproject.toml
src/: config.py  main.py  manager.py  state.py
src/ui/: batch_dialog.py  components.py  header.py  toolbar.py  utils.py  version_grid.py
tests/: test_linking.py
