[project]
name = "pivot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet>=0.80.2",
  "flet-cli>=0.80.2",
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.2",
  "pillow>=12.1.0",
  "pyinstaller>=6.18.0",
  "pytest>=9.0.2",
  "ruff>=0.14.13",
]

[tool.flet]
org = "com.mycompany"
product = "pivot"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"
